force-app/main/default/objects/Contract_For_Service__c/Contract_For_Service__c.object-meta.xml
<CustomObject>
    <description>It will receive all the contracts coming from EDW via iPass</description>
    <label>Contract For Service</label>
    <nameField>
        <displayFormat>CFS-{0000}</displayFormat>
        <label>Contract For Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract For Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>