force-app/main/default/objects/Contract_For_Service__c/fields/Active_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Active_Trigger__c</fullName>
    <label>Active Trigger</label>
    <length>10</length>
    <type>Text</type>
</CustomField>