force-app/main/default/objects/Contract_For_Service__c/fields/Adoption_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Agreement__c</fullName>
    <label>Adoption Agreement?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>