force-app/main/default/objects/Contract_For_Service__c/fields/Annual_Pricing_Method_Text__c.field-meta.xml
<CustomField>
    <fullName>Annual_Pricing_Method_Text__c</fullName>
    <label>Annual Pricing Method Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>