force-app/main/default/objects/Contract_For_Service__c/fields/Annual_Pricing_Not_to_Exceed__c.field-meta.xml
<CustomField>
    <fullName>Annual_Pricing_Not_to_Exceed__c</fullName>
    <label>Annual Pricing Not to Exceed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>