force-app/main/default/objects/Contract_For_Service__c/fields/Contract_File_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_File_Value__c</fullName>
    <label>Contract File Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>