force-app/main/default/objects/Contract_For_Service__c/fields/Contract_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Header_ID__c</fullName>
    <label>Contract Header ID</label>
    <length>45</length>
    <type>Text</type>
</CustomField>