force-app/main/default/objects/Contract_For_Service__c/fields/Do_SLA_Penalties_apply__c.field-meta.xml
<CustomField>
    <fullName>Do_SLA_Penalties_apply__c</fullName>
    <label>Do SLA Penalties apply</label>
    <length>200</length>
    <type>Text</type>
</CustomField>