force-app/main/default/objects/Contract_For_Service__c/fields/Due_or_Late__c.field-meta.xml
<CustomField>
    <fullName>Due_or_Late__c</fullName>
    <label>Due or Late</label>
    <length>200</length>
    <type>Text</type>
</CustomField>