force-app/main/default/objects/Contract_For_Service__c/fields/Invoice_Offset__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Offset__c</fullName>
    <label>Invoice Offset</label>
    <length>200</length>
    <type>Text</type>
</CustomField>