force-app/main/default/objects/Contract_For_Service__c/fields/Price_Increase_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Notice_Days__c</fullName>
    <label>Price Increase Notice-Days</label>
    <length>200</length>
    <type>Text</type>
</CustomField>