force-app/main/default/objects/Contract_For_Service__c/fields/Services_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Services_Sales_Owner__c</fullName>
    <label>Services Sales Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>