force-app/main/default/objects/Contract_For_Service__c/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <label>Signature Required?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>